objects/Response_PFQ__c.object
<CustomObject>
    <description>Hold records from PFQ from Survey Gizmo</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Contact&apos;s name</description>
        <formula>Participant__r.Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contact&apos;s name</inlineHelpText>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Responses PFQ</relationshipLabel>
        <relationshipName>Responses_PFQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>PFQ Responses</relationshipLabel>
        <relationshipName>Responses_PFQ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Q_Acheive_Level_3__c</fullName>
        <description>What are you hoping to achieve through your participation in the Expert Negotiation Program?</description>
        <inlineHelpText>What are you hoping to achieve through your participation in the Expert Negotiation Program?</inlineHelpText>
        <label>Q Acheive Level 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Areas_Types_Involved__c</fullName>
        <description>What areas/types of negotiation and influencing are you involved in?</description>
        <inlineHelpText>What areas/types of negotiation and influencing are you involved in?</inlineHelpText>
        <label>Q Areas / Types Involved</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Assistance_in_Marketing__c</fullName>
        <description>What assistance would you like to have during or after the CDP-F to help enhance your marketing effectiveness (either internally or externally)?</description>
        <inlineHelpText>What assistance would you like to have during or after the CDP-F to help enhance your marketing effectiveness (either internally or externally)?</inlineHelpText>
        <label>Q Assistance in Marketing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Building_Approaches_into_work_practice__c</fullName>
        <description>How effective have you been in building these approaches into your work practices?</description>
        <inlineHelpText>How effective have you been in building these approaches into your work practices?</inlineHelpText>
        <label>Q Building Approaches into work practice</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Challenges_1__c</fullName>
        <description>Generally, in your area of negotiating activity, what are the top three challenges you face?</description>
        <inlineHelpText>Generally, in your area of negotiating activity, what are the top three challenges you face?</inlineHelpText>
        <label>Q Challenges 1</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Challenges_2__c</fullName>
        <description>Generally, in your area of negotiating activity, what are the top three challenges you face?</description>
        <inlineHelpText>Generally, in your area of negotiating activity, what are the top three challenges you face?</inlineHelpText>
        <label>Q Challenges 2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Challenges_3__c</fullName>
        <description>Generally, in your area of negotiating activity, what are the top three challenges you face?</description>
        <inlineHelpText>Generally, in your area of negotiating activity, what are the top three challenges you face?</inlineHelpText>
        <label>Q Challenges 3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Competence__c</fullName>
        <description>How would you rate your current level of negotiation Competence</description>
        <inlineHelpText>How would you rate your current level of negotiation Competence</inlineHelpText>
        <label>Q Competence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Confidence__c</fullName>
        <description>How would you rate your current level of negotiation Confidence</description>
        <inlineHelpText>How would you rate your current level of negotiation Confidence</inlineHelpText>
        <label>Q Confidence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Content_Brief_Outcome__c</fullName>
        <description>CONTENT - Briefly describe what the negotiation was about and the outcome achieved.</description>
        <inlineHelpText>CONTENT - Briefly describe what the negotiation was about and the outcome achieved.</inlineHelpText>
        <label>Q Content Brief/Outcome</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Difficulties_since_level_1_2__c</fullName>
        <description>Since attending the ENSI Level 1 workshop, what difficulties have you experienced with your personal negotiation development? (List one item per line below)</description>
        <inlineHelpText>Since attending the ENSI Level 1 workshop, what difficulties have you experienced with your personal negotiation development? (List one item per line below)</inlineHelpText>
        <label>Q Difficulties since previous course  2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Difficulties_since_level_2__c</fullName>
        <description>Since attending the ENSI Level 1 workshop, what difficulties have you experienced with your personal negotiation development? (List one item per line below)</description>
        <inlineHelpText>Since attending the ENSI Level 1 workshop, what difficulties have you experienced with your personal negotiation development? (List one item per line below)</inlineHelpText>
        <label>Q Difficulties since previous course 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Difficulties_since_previous_couse_1__c</fullName>
        <description>Since attending the ENSI Level 1 workshop, what difficulties have you experienced with your personal negotiation development? (List one item per line below)</description>
        <inlineHelpText>Since attending the ENSI Level 1 workshop, what difficulties have you experienced with your personal negotiation development? (List one item per line below)</inlineHelpText>
        <label>Q Difficulties since previous course 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Effective_Neg_Definition__c</fullName>
        <description>How would you define &apos;effective negotiation&apos;?</description>
        <inlineHelpText>How would you define &apos;effective negotiation&apos;?</inlineHelpText>
        <label>Q Effective Neg Definition</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Effectiveness_when_training_1__c</fullName>
        <description>Summarise what you believe to be your greatest areas of effectiveness when training or facilitating the learning of others.</description>
        <inlineHelpText>Summarise what you believe to be your greatest areas of effectiveness when training or facilitating the learning of others.</inlineHelpText>
        <label>Q Effectiveness when training  1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Effectiveness_when_training_2__c</fullName>
        <description>Summarise what you believe to be your greatest areas of effectiveness when training or facilitating the learning of others.</description>
        <inlineHelpText>Summarise what you believe to be your greatest areas of effectiveness when training or facilitating the learning of others.</inlineHelpText>
        <label>Q Effectiveness when training  2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Effectiveness_when_training_3__c</fullName>
        <description>Summarise what you believe to be your greatest areas of effectiveness when training or facilitating the learning of others.</description>
        <inlineHelpText>Summarise what you believe to be your greatest areas of effectiveness when training or facilitating the learning of others.</inlineHelpText>
        <label>Q Effectiveness when training  3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Experience_in_Marketing__c</fullName>
        <description>What sort of experience have you had marketing professional services?</description>
        <inlineHelpText>What sort of experience have you had marketing professional services?</inlineHelpText>
        <label>Q Experience in Marketing</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Facing_in_next_2_moths__c</fullName>
        <description>What are you likely to be facing in the next 2 months?</description>
        <inlineHelpText>What are you likely to be facing in the next 2 months?</inlineHelpText>
        <label>Q Facing in next 2 moths</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Further_Objectives__c</fullName>
        <description>What further objectives does the above person suggest, and how can they assist you after the workshop to implement your personal development plans?</description>
        <inlineHelpText>What further objectives does the above person suggest, and how can they assist you after the workshop to implement your personal development plans?</inlineHelpText>
        <label>Q Further Objectives</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_How_would_you_measure_their_value__c</fullName>
        <description>How would you measure their (techniques used) value?</description>
        <inlineHelpText>How would you measure their (techniques used) value?</inlineHelpText>
        <label>Q How would you measure their value?</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Identify_Person_s_Title__c</fullName>
        <description>Identify who plays a major part in supporting you in achieving your personal objectives. Review your objectives with this person (who may or may not be your supervisor).
Person&apos;s Name
Person&apos;s Position Title</description>
        <inlineHelpText>Identify who plays a major part in supporting you in achieving your personal objectives. Review your objectives with this person (who may or may not be your supervisor).
Person&apos;s Name
Person&apos;s Position Title</inlineHelpText>
        <label>Q Identify Person&apos;s Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q_Identify_Persons_Name__c</fullName>
        <description>Identify who plays a major part in supporting you in achieving your personal objectives. Review your objectives with this person (who may or may not be your supervisor).
Person&apos;s Name
Person&apos;s Position Title</description>
        <inlineHelpText>Identify who plays a major part in supporting you in achieving your personal objectives. Review your objectives with this person (who may or may not be your supervisor).
Person&apos;s Name
Person&apos;s Position Title</inlineHelpText>
        <label>Q Identify Persons Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q_Important_Aspects__c</fullName>
        <description>Which aspects of the ENSI negotiation framework stand out as most important for your work based negotiations?</description>
        <inlineHelpText>Which aspects of the ENSI negotiation framework stand out as most important for your work based negotiations?</inlineHelpText>
        <label>Q Important Aspects</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Impove_conducting_ENSI_Workshop_1__c</fullName>
        <description>What aspects of effectiveness for conducting an ENSI Workshop would you most like to improve?</description>
        <inlineHelpText>What aspects of effectiveness for conducting an ENSI Workshop would you most like to improve?</inlineHelpText>
        <label>Q Impove conducting ENSI Workshop 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Impove_conducting_ENSI_Workshop_2__c</fullName>
        <description>What aspects of effectiveness for conducting an ENSI Workshop would you most like to improve?</description>
        <inlineHelpText>What aspects of effectiveness for conducting an ENSI Workshop would you most like to improve?</inlineHelpText>
        <label>Q Impove conducting ENSI Workshop 2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Impove_conducting_ENSI_Workshop_3__c</fullName>
        <description>What aspects of effectiveness for conducting an ENSI Workshop would you most like to improve?</description>
        <inlineHelpText>What aspects of effectiveness for conducting an ENSI Workshop would you most like to improve?</inlineHelpText>
        <label>Q Impove conducting ENSI Workshop 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Learnings_Insights_1__c</fullName>
        <description>What were other interesting learnings/insights for you?</description>
        <inlineHelpText>What were other interesting learnings/insights for you?</inlineHelpText>
        <label>Q Learnings/Insights 1</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Learnings_Insights_2__c</fullName>
        <description>What else were very interesting learnings/insights for you?</description>
        <inlineHelpText>What else were very interesting learnings/insights for you?</inlineHelpText>
        <label>Q Learnings/Insights 2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Learnings_Insights_3__c</fullName>
        <description>What else were very interesting learnings/insights for you?</description>
        <inlineHelpText>What else were very interesting learnings/insights for you?</inlineHelpText>
        <label>Q Learnings/Insights 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Magically_Change_Approach__c</fullName>
        <description>If you could magically change one aspect of your approach to facilitation or training, what would it be?</description>
        <inlineHelpText>If you could magically change one aspect of your approach to facilitation or training, what would it be?</inlineHelpText>
        <label>Q Magically Change Approach</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Negotiation_Difficulties__c</fullName>
        <description>What aspects of the negotiations you engage in present difficulties for you? Include in your reflections - internal and external negotiations.</description>
        <inlineHelpText>What aspects of the negotiations you engage in present difficulties for you? Include in your reflections - internal and external negotiations.</inlineHelpText>
        <label>Q Negotiation Difficulties</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Negotiation_Title__c</fullName>
        <description>Select a significant negotiation which you have been involved in recently. Complete the following post-negotiation review.
Negotiation Title (descriptive):</description>
        <inlineHelpText>Select a significant negotiation which you have been involved in recently. Complete the following post-negotiation review.
Negotiation Title (descriptive):</inlineHelpText>
        <label>Q Negotiation Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q_Negotiators_OP__c</fullName>
        <description>Negotiators: Other party (list names, position titles and any other relevant information):</description>
        <inlineHelpText>Negotiators: Other party (list names, position titles and any other relevant information):</inlineHelpText>
        <label>Q Negotiators OP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q_Negotiators_Our_Side__c</fullName>
        <description>Negotiators - Our side (list names, position titles and any other relevant information):</description>
        <inlineHelpText>Negotiators - Our side (list names, position titles and any other relevant information):</inlineHelpText>
        <label>Q Negotiators Our Side</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q_Objectives_1__c</fullName>
        <description>What objectives (minimum of three) do you personally wish to achieve from this workshop? Include individual attributes you would like to develop</description>
        <inlineHelpText>What objectives (minimum of three) do you personally wish to achieve from this workshop? Include individual attributes you would like to develop</inlineHelpText>
        <label>Q Objectives 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Objectives_2__c</fullName>
        <description>What objectives (minimum of three) do you personally wish to achieve from this workshop? Include individual attributes you would like to develop</description>
        <inlineHelpText>What objectives (minimum of three) do you personally wish to achieve from this workshop? Include individual attributes you would like to develop</inlineHelpText>
        <label>Q Objectives 2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Objectives_3__c</fullName>
        <description>What objectives (minimum of three) do you personally wish to achieve from this workshop? Include individual attributes you would like to develop</description>
        <inlineHelpText>What objectives (minimum of three) do you personally wish to achieve from this workshop? Include individual attributes you would like to develop</inlineHelpText>
        <label>Q Objectives 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Other_Comments__c</fullName>
        <description>What other comments would you like to make to help us structure the program to best meet your needs</description>
        <inlineHelpText>What other comments would you like to make to help us structure the program to best meet your needs</inlineHelpText>
        <label>Q Other Comments</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Percent_of_Time__c</fullName>
        <description>What percentage of your work time do you spend negotiating and influencing</description>
        <inlineHelpText>What percentage of your work time do you spend negotiating and influencing</inlineHelpText>
        <label>Q Percent of Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q_Previous_ENSI_workshop_materials__c</fullName>
        <description>What previous experience have you had of ENS workshops and materials?</description>
        <inlineHelpText>What previous experience have you had of ENS workshops and materials?</inlineHelpText>
        <label>Q Previous ENSI workshop/materials</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Previous_Other_negotiation_workshops__c</fullName>
        <description>What prior experience have you had with other negotiation training workshops</description>
        <inlineHelpText>What prior experience have you had with other negotiation training workshops</inlineHelpText>
        <label>Q Previous Other negotiation workshops</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Previous_Train_the_trainer__c</fullName>
        <description>What kind of train-the-trainer training have you had previously?</description>
        <inlineHelpText>What kind of train-the-trainer training have you had previously?</inlineHelpText>
        <label>Q Previous Train the trainer</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Previous_teacher_facilitator_trainer__c</fullName>
        <description>What previous experience have you had as a teacher, presenter, facilitator or trainer?</description>
        <inlineHelpText>What previous experience have you had as a teacher, presenter, facilitator or trainer?</inlineHelpText>
        <label>Q Previous teacher/facilitator/trainer</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Prior_Training__c</fullName>
        <description>What prior training have you received in negotiation or conflict resolution?</description>
        <inlineHelpText>What prior training have you received in negotiation or conflict resolution?</inlineHelpText>
        <label>Q Prior Training</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Process_Did_Well_2__c</fullName>
        <description>PROCESS - Reflect on how this negotiation was managed. Briefly describe the critical process points for:
What went well (minimum of three points)?</description>
        <inlineHelpText>PROCESS - Reflect on how this negotiation was managed. Briefly describe the critical process points for:
What went well (minimum of three points)?</inlineHelpText>
        <label>Q Process Did Well 2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Process_Did_Well_3__c</fullName>
        <description>PROCESS - Reflect on how this negotiation was managed. Briefly describe the critical process points for:
What went well (minimum of three points)?</description>
        <inlineHelpText>PROCESS - Reflect on how this negotiation was managed. Briefly describe the critical process points for:
What went well (minimum of three points)?</inlineHelpText>
        <label>Q Process Did Well 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Process_Did_Well__c</fullName>
        <description>PROCESS - Reflect on how this negotiation was managed. Briefly describe the critical process points for:
What went well (minimum of three points)?</description>
        <inlineHelpText>PROCESS - Reflect on how this negotiation was managed. Briefly describe the critical process points for:
What went well (minimum of three points)?</inlineHelpText>
        <label>Q Process Did Well 1</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Process_Do_Differently_1__c</fullName>
        <description>PROCESS - What would you recommend be done differently next time (minimum of three points)?</description>
        <inlineHelpText>PROCESS - What would you recommend be done differently next time (minimum of three points)?</inlineHelpText>
        <label>Q Process Do Differently 1</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Process_Do_Differently_2__c</fullName>
        <description>PROCESS - What would you recommend be done differently next time (minimum of three points)?</description>
        <inlineHelpText>PROCESS - What would you recommend be done differently next time (minimum of three points)?</inlineHelpText>
        <label>Q Process Do Differently 2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Process_Do_Differently_3__c</fullName>
        <description>PROCESS - What would you recommend be done differently next time (minimum of three points)?</description>
        <inlineHelpText>PROCESS - What would you recommend be done differently next time (minimum of three points)?</inlineHelpText>
        <label>Q Process Do Differently 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Process_Strengths_2__c</fullName>
        <description>Since attending your last ENS workshop, what process strengths (minimum of three) have you experienced as important in your personal negotiation development?</description>
        <inlineHelpText>Since attending your last ENS workshop, what process strengths (minimum of three) have you experienced as important in your personal negotiation development?</inlineHelpText>
        <label>Q Process Strengths 2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Process_Strengths_3__c</fullName>
        <description>Since attending your last ENS workshop, what process strengths (minimum of three) have you experienced as important in your personal negotiation development?</description>
        <inlineHelpText>Since attending your last ENS workshop, what process strengths (minimum of three) have you experienced as important in your personal negotiation development?</inlineHelpText>
        <label>Q Process Strengths 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Process_Strengths__c</fullName>
        <description>Since attending your last ENS workshop, what process strengths (minimum of three) have you experienced as important in your personal negotiation development?</description>
        <inlineHelpText>Since attending your last ENS workshop, what process strengths (minimum of three) have you experienced as important in your personal negotiation development?</inlineHelpText>
        <label>Q Process Strengths 1</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Scenario_Approach__c</fullName>
        <description>During the workshop you will be asked to review actual negotiation/influencing situations in which you are involved. Please select one current or near future scenario that will be completed after the workshop, and provide the following brief details
•	How are you planning to approach the situation</description>
        <inlineHelpText>How are you planning to approach the situation</inlineHelpText>
        <label>Q Scenario Approach</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Scenario_Difficult_Aspects__c</fullName>
        <description>During the workshop you will be asked to review actual negotiation/influencing situations in which you are involved. Please select one current or near future scenario that will be completed after the workshop, and provide the following brief details
•	What do you believe will be the most difficult aspects of the situation?</description>
        <inlineHelpText>What do you believe will be the most difficult aspects of the situation?</inlineHelpText>
        <label>Q Scenario Difficult Aspects</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Scenario_OP_Objectives__c</fullName>
        <description>During the workshop you will be asked to review actual negotiation/influencing situations in which you are involved. Please select one current or near future scenario that will be completed after the workshop, and provide the following brief details:
•	What are the other party&apos;s primary objectives?</description>
        <inlineHelpText>What are the other party&apos;s primary objectives?</inlineHelpText>
        <label>Q Scenario OP Objectives</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Scenario_Situation__c</fullName>
        <description>During the workshop you will be asked to review actual negotiation/influencing situations in which you are involved. Please select one current or near future scenario that will be completed after the workshop, and provide the following brief details:
•	What is the situation about (brief descriptive title)?</description>
        <inlineHelpText>What is the situation about (brief descriptive title)?</inlineHelpText>
        <label>Q Scenario Situation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Scenario_Your_Objectives__c</fullName>
        <description>During the workshop you will be asked to review actual negotiation/influencing situations in which you are involved. Please select one current or near future scenario that will be completed after the workshop, and provide the following brief details
•	What are your primary objectives</description>
        <inlineHelpText>•	What are your primary objectives</inlineHelpText>
        <label>Q Scenario Your Objectives</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Shortcomings_1__c</fullName>
        <description>In your area, what are the three most common shortcomings observable in negotiating and influencing
Response 1</description>
        <inlineHelpText>In your area, what are the three most common shortcomings observable in negotiating and influencing
Response 1</inlineHelpText>
        <label>Q Shortcomings 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Shortcomings_2__c</fullName>
        <description>In your area, what are the three most common shortcomings observable in negotiating and influencing
Response 2</description>
        <inlineHelpText>In your area, what are the three most common shortcomings observable in negotiating and influencing
Response 2</inlineHelpText>
        <label>Q Shortcomings 2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Shortcomings_3__c</fullName>
        <description>In your area, what are the three most common shortcomings observable in negotiating and influencing
Response 3</description>
        <inlineHelpText>In your area, what are the three most common shortcomings observable in negotiating and influencing
Response 3</inlineHelpText>
        <label>Q Shortcomings 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Skills_1__c</fullName>
        <description>What are the three specific negotiating and influencing skills required to achieve results in your area of activity? 
Response 1</description>
        <inlineHelpText>What are the three specific negotiating and influencing skills required to achieve results in your area of activity? 
Response 1</inlineHelpText>
        <label>Q Skills 1</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Skills_2__c</fullName>
        <description>What are the three specific negotiating and influencing skills required to achieve results in your area of activity? 
Response 2</description>
        <inlineHelpText>What are the three specific negotiating and influencing skills required to achieve results in your area of activity? 
Response 2</inlineHelpText>
        <label>Q Skills 2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Skills_3__c</fullName>
        <description>What are the three specific negotiating and influencing skills required to achieve results in your area of activity? 
Response 3</description>
        <inlineHelpText>What are the three specific negotiating and influencing skills required to achieve results in your area of activity? 
Response 3</inlineHelpText>
        <label>Q Skills 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_TGroup_Focus_2__c</fullName>
        <description>During the Clinic will you be focusing on Ninlaro, Entyvio, both or another negotiation? If more than one, please put them in order of importance.</description>
        <inlineHelpText>During the Clinic will you be focusing on Ninlaro, Entyvio, both or another negotiation? If more than one, please put them in order of importance.</inlineHelpText>
        <label>Q TGroup Focus 2</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_TGroup_Focus_3__c</fullName>
        <description>During the Clinic will you be focusing on Ninlaro, Entyvio, both or another negotiation? If more than one, please put them in order of importance.</description>
        <inlineHelpText>During the Clinic will you be focusing on Ninlaro, Entyvio, both or another negotiation? If more than one, please put them in order of importance.</inlineHelpText>
        <label>Q TGroup Focus 3</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_TGroup_Focus__c</fullName>
        <description>During the Clinic will you be focusing on Ninlaro, Entyvio, both or another negotiation? If more than one, please put them in order of importance.</description>
        <inlineHelpText>During the Clinic will you be focusing on Ninlaro, Entyvio, both or another negotiation? If more than one, please put them in order of importance.</inlineHelpText>
        <label>Q TGroup Focus 1</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>